# Sentinel

./: mlflow.db  pyproject.toml
artifacts/vae/: checkpoint.pt
mlruns/1/7855dd90ceef4a03bed96e27238aadde/artifacts/: checkpoint.pt
scripts/: evaluate_baseline.py  evaluate_vae.py  train_baseline.py  train_vae.py
sentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sentinel/data/: cmapss.py
sentinel/inference/: baseline.py  vae_scorer.py
sentinel/models/: statistical_baseline.py  vae.py
sentinel/training/: train_vae.py
tests/data/: test_cmapss.py
tests/inference/: test_baseline.py  test_vae_scorer.py
tests/models/: test_statiscal_baseline.py
